--- a/demo/effect/背景填充屏幕.html
+++ b/demo/effect/背景填充屏幕.html
@@ -7,24 +7,30 @@
     <title>背景填充屏幕</title>
     <link rel="stylesheet" href="../../bin/module.css"/>
     <style type="text/css">
-        html{
-            background: transparent url("http://jedidiah.eu/code/css/masks/hidden_world/real.jpg") no-repeat top left;
-            -webkit-background-size: 100% auto;
+        /*html{*/
+            /*background: transparent url("") no-repeat top left;*/
+            /*-webkit-background-size: 100% auto;*/
+        /*}*/
+
+        div{
+            background: url("http://img0.bdstatic.com/img/image/shouye/mvznns.jpg");
         }
     </style>
 </head>
 <body>
 
 
+                <div class="full-screen-bg">
+
+                    <h1>哈哈</h1>
+                    <p>
+                        你们不错的嘛
+                    </p>
+
+                </div>
+
+
 
 </body>
 </html>
 <script type="text/javascript" src="../../bin/zepto.service.01.min.js"></script>
-
-<script type="text/javascript">
-
-    $(".tpbtn").click(function () {
-        $(".circle").removeClass("hide").addClass("show");
-    });
-
-</script>
