--- a/test/f7-float.html
+++ b/test/f7-float.html
@@ -60,7 +60,7 @@
 
     <div class="col-33" style="background: saddlebrown;">33%</div>
     <div class="col-33" style="background: saddlebrown;">33%</div>
-    <div class="col-33" style="background: saddlebrown;">33%</div>
+    <div class="col-33" style="background: saddlebrown; width: 34%;">33%</div>
 
 </div>
 
